--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jjs/common",
+    "name": "macs/common",
     "description": "Common functionality used by some JJs bundles",
     "license": "MIT",
     "authors": [
@@ -11,8 +11,7 @@
     "autoload": {
         "psr-0": {"JJs\\Common": "src"}
     },
-    "minimum-stability": "dev",
     "require": {
-        "php": "~5.4"
+        "php": "*"
     }
 }
